Set max height of code view 1px less to avoid doble scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,9 @@
     @apply text-2xl;
   }
 }
+
+app-froala-component {
+  .fr-code {
+    max-height: 499px !important;
+  }
+}
